
    Sam (game_loop.cpp, game_loop.hpp):
        - Adicionada uma nova classe de imagem que pode se mover pelo display
            - Não herda de nenhuma outra classe
            - Não tem colisão nem detecção de clique
        - Iniciada a programação da tela de morte
            - Ainda não tem quase nada pronto, mas já tem uma tela em branco que sobe
        - Adicionados mais alguns sprites para UI

11-06-2025

    Pedro (registration) :
        - Troca do container vector para set na função de retorno dos players registrados(get_all())
        - Sobrecarga do operador < para ordenar os jogadores por ordem alfabética dentro do set

12-06-2025

    Pedro (registration) :
        - Troca do set para multiset para permitir ordenação pelo score
        - Pequenas mudanças de tipo de retorno e verificações para deixar menos propício a falhas

13-06-2025

    Matsura (src, include) :
        - Melhora visual do menu de login
        - Substituição do vector por multiset nas telas
        - Implementação de atalhos: TAB para alternar campos e ENTER para confirmar

    Matsura (src, include) :
        - Bitmap de coroa para indicar jogadores com o maior score
        - Reorganização visual da localização dos textos com o novo fundo
        - Correção de bug de segmentation fault

    Sam (image, game_loop):
        - Padronizados os metodos de set do TAD image (exceto posição)
        - Adicionado um draw com scale para o image (tinha esquecido de implementar)
        - Mais algumas adições ao menu de morte
            - Layout dos pontos está pronto, só falta mostrar a pontuação
            - Botão de jogar de novo ja aparece junto com a tela de morte, mas ainda não responde ao clique
            - Botões de home e achievements não estão se movendo junto com a tela de morte como era esperado (ainda vai ser corrigido)

    Matsura (src, include) :
        -Implementação da tela de remoção de usuário (ainda não funcional)
